--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -168,7 +168,7 @@ main {
       text-align: center;
       padding: 1rem 0;
       text-decoration: none;
-      border-bottom: 1px solid #ececec;
+      border-bottom: 1px solid #ccc;
 
       @media screen and (max-width: $mobileW) {
         padding: 2rem 0;
@@ -178,7 +178,7 @@ main {
 }
 
 .post-wrapper {
-  border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid #ccc;
   margin-bottom: 1rem;
   padding-bottom: 1rem;
 }
